More UI changes for wallet, partway through diagnosing scrollbar issue.

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -2,6 +2,7 @@
 
 main {
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     width: 100%;
     height: 100%;
